# Terminal-Elevator

./: CMakeLists.txt  README.md  build.sh  main.cpp
src/: CMakeLists.txt  elevator.cpp  passenger_process.cpp  scheduler.cpp
src/include/: elevator.hpp  elevator_sim_lib.hpp  passenger_process.hpp  scheduler.hpp
